Update body tag to include onclick redirect

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
     </script>
 </head>
-<body>
+<body onclick="window.location.href('planner.html')">
     <p class="title">PLAN YOUR SH1T.</p>
     <p class="smtitle">Your stop and think spot.</p>
     
