Update title and credits in index.html

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     </script>
 </head>
 <body onclick="window.location.href('planner.html')">
-    <p class="title">PLAN YOUR SH1T.</p>
+    <p class="title">PLAN YOUR STUFF.</p>
     <p class="smtitle">Your stop and think spot.</p>
     
     <div class="login-container">
         <div id="buttonDiv"></div>
     </div>
 
-    <p class="credits">CodeKarta: Rudransh Bhalla</p>
+    <p class="credits">Rudransh Bhalla</p>
     <p class="credits">2025B3HyD</p>
 </body>
 </html>
